--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item" href="#">FAQs</a>
                             <a class="dropdown-item" href="#">Blogs</a>
-                            <a class="dropdown-item" href="#">Our tie Up Partners</a>
+                            <a class="dropdown-item" href="index.html#partners">Our Partners</a>
                         </div>
                     </li>
                 </ul>
@@ -98,7 +98,7 @@
                     <div class="col-lg-7 col-md-6 col-xl-6">
                         <div>
                             <h1 class="theme-h1 text-white">All financial Solutions
-under <span class="text-black-50">One Roof</span></h1>
+under <a class="typewrite" data-period="2000" data-type='[ "One Roof.", "One Platform." ]' style="color: rgba(0, 0, 0, 0.5) !important;"></a></h1>
                             <p class="theme-p mb-4 text-light">Get access to all financial platforms and solutions under a single platform</p>
                             <button class="theme-btn btn my-2 my-sm-0 theme-bg2">Learn More</button>
                         </div>
@@ -392,7 +392,7 @@ Top Mutual Funds Recommendations for June 2021</h4>
                 </div>
             </div>
         </div>
-        <div class="section-body">
+        <div class="section-body" id="partners">
             <div id="carouselExampleControls2" class="carousel slide logos" data-ride="carousel" data-interval="false">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -726,8 +726,78 @@ Top Mutual Funds Recommendations for June 2021</h4>
                         <img src="assets/partner.png">
                     </div>
                     <div class="pl-5 pr-5 ml-5 col-xl-7 col-lg-7 col-10">
-                        <p class="theme-p">Finorator allows you to be a financial partner aggregating financial platforms related to different financial segments including shares, mutual funds, loans, income tax, real estate, and other investments to control & manage an individual’s financial operations.</p>
+                        <p class="theme-p">Finorator allows you to become a financial aggregator partner related to different financial segments including shares, mutual funds, loans, income tax, real estate, and other investments products of every segment and seamlessly manage all financial operations of your business under one integrated CRM.</p>
                         <a class="theme-btn btn my-2 my-sm-0" href="partner.html">Join Now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section-body">
+            <div class="container">
+                <div class="theme-head text-center">Associated partners with
+</div>
+                <div class="row" style="align-items: center; justify-content: center;">
+                    <div class="col-lg-2 col-12 col-sm-6 col-xl-3">
+                        <div class="step-card">
+                            <img src="assets/BSestarMF.gif">
+                            <div class="title">BSE STAR MF</div>
+                            <div class="description">BSE Star MF Member Code&nbsp;- 
+                                <b>52145</b>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-12 col-sm-6 col-xl-3">
+                        <div class="step-card">
+                            <img src="assets/amfi.jpeg">
+                            <div class="title">AMFI</div>
+                            <div class="description">AMFI Member Code&nbsp;- 
+                                <b>147019</b>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-12 col-sm-6 col-xl-3">
+                        <div class="step-card">
+                            <img src="assets/dealsofloan.png">
+                            <div class="title">Deals of Loan</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-12 col-sm-6 col-xl-3">
+                        <div class="step-card">
+                            <img src="assets/pos-gibl-logo.jpeg">
+                            <div class="title">GIBL</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section-body">
+            <div class="container">
+                <div class="theme-head text-center">Government Affiliations
+</div>
+                <div class="row affiliations" style="align-items: center; justify-content: center;">
+                    <div class="col-lg-2 col-12 col-sm-6 col-xl-3">
+                        <div class="step-card">
+                            <img src="assets/startuplogo_trans.png">
+                            <div class="title">Start up Chhattisgarh</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-12 col-sm-6 col-xl-3">
+                        <div class="step-card">
+                            <img src="assets/36inc.png">
+                            <div class="title">36Inc</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-12 col-sm-6 col-xl-3">
+                        <div class="step-card">
+                            <img src="assets/Startup%20India%20Logo1-02.png">
+                            <div class="title">Start-up India</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-12 col-sm-6 col-xl-3">
+                        <div class="step-card">
+                            <img src="assets/png-clipart-government-of-india-ministry-of-micro-small-and-medium-enterprises-small-business-india-text-logo-thumbnail.png">
+                            <div class="title">Ministry of MSME</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -738,6 +808,18 @@ Top Mutual Funds Recommendations for June 2021</h4>
                 <div class="row" style="align-items: center;">
                     <div class="col-xl-8">
                         <div id="carouselExampleControls3" class="carousel slide" data-ride="carousel" data-interval="false">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carouselExampleControls3" data-slide-to="0" class="active"></li>
+                                <li data-target="#carouselExampleControls3" data-slide-to="1"></li>
+                                <li data-target="#carouselExampleControls3" data-slide-to="2"></li>
+                                <li data-target="#carouselExampleControls3" data-slide-to="2"></li>
+                                <li data-target="#carouselExampleControls3" data-slide-to="3"></li>
+                                <li data-target="#carouselExampleControls3" data-slide-to="4"></li>
+                                <li data-target="#carouselExampleControls3" data-slide-to="5"></li>
+                                <li data-target="#carouselExampleControls3" data-slide-to="6"></li>
+                                <li data-target="#carouselExampleControls3" data-slide-to="7"></li>
+                                <li data-target="#carouselExampleControls3" data-slide-to="8"></li>
+                            </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="testimony-card">
@@ -976,6 +1058,64 @@ Reach Us Email id</b> – support@finorator.com</p>
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/popper.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script>
+	var TxtType = function(el, toRotate, period) {
+        this.toRotate = toRotate;
+        this.el = el;
+        this.loopNum = 0;
+        this.period = parseInt(period, 10) || 2000;
+        this.txt = '';
+        this.tick();
+        this.isDeleting = false;
+    };
+
+    TxtType.prototype.tick = function() {
+        var i = this.loopNum % this.toRotate.length;
+        var fullTxt = this.toRotate[i];
+
+        if (this.isDeleting) {
+        this.txt = fullTxt.substring(0, this.txt.length - 1);
+        } else {
+        this.txt = fullTxt.substring(0, this.txt.length + 1);
+        }
+
+        this.el.innerHTML = '<span class="wrap">'+this.txt+'</span>';
+
+        var that = this;
+        var delta = 200 - Math.random() * 100;
+
+        if (this.isDeleting) { delta /= 2; }
+
+        if (!this.isDeleting && this.txt === fullTxt) {
+        delta = this.period;
+        this.isDeleting = true;
+        } else if (this.isDeleting && this.txt === '') {
+        this.isDeleting = false;
+        this.loopNum++;
+        delta = 500;
+        }
+
+        setTimeout(function() {
+        that.tick();
+        }, delta);
+    };
+
+    window.onload = function() {
+        var elements = document.getElementsByClassName('typewrite');
+        for (var i=0; i<elements.length; i++) {
+            var toRotate = elements[i].getAttribute('data-type');
+            var period = elements[i].getAttribute('data-period');
+            if (toRotate) {
+              new TxtType(elements[i], JSON.parse(toRotate), period);
+            }
+        }
+        // INJECT CSS
+        var css = document.createElement("style");
+        css.type = "text/css";
+        css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
+        document.body.appendChild(css);
+    };
+</script>
         <script>
 $(document).ready(function(){
   $('a.test').on("click", function(e){
