--- a/partner.html
+++ b/partner.html
@@ -113,9 +113,13 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
         <div class="section-body" id="partner-body">
             <div class="container">
                 <div class="theme-head text-center">Become a Partner</div>
-                <p class="partner-section">Finorator allows you to be an expert financial manager who is aware of all the segments of finance including shares, mutual funds, loans, income tax, real estate, as well as other investments and using products of every segment to manage the financial operations of your business.<br><br><div class="text-center theme-color">You’re just one step away from your 
-                        <b>Dream Career</b>
-                    </div><b></b></p>
+                <p class="partner-section">Finorator allows you to be an expert financial manager who is aware of all the segments of finance including shares, mutual funds, loans, income tax, real estate, and other investments products of every segment and seamlessly manage all financial operations of your business under one intergated CRM</p>
+                <br>
+                <br>
+                <div class="text-center theme-color">You’re just one step away from your 
+                    <b>Dream Career</b>
+                </div>
+                <b></b>
                 <div class="theme-head mt-4 text-center">Why become a Finorator Partner?</div>
                 <div class="row">
                     <div class="col-lg-4 col-xl-4">
@@ -241,7 +245,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                             </div>
                             <div class="form-group">
                                 <label for="formGroupExampleInput2">Aadhar Card</label>
-                                <input type="text" class="form-control" id="" placeholder="Enter your adhar card"/>
+                                <input type="text" class="form-control" id="" placeholder="Enter your aadhar card"/>
                             </div>
                             <div class="form-group">
                                 <label for="formGroupExampleInput2">PAN Card</label>
@@ -256,7 +260,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                                     <option value="opel">Insurance</option>
                                     <option value="audi">Loans</option>
                                     <option value="audi">Shares & Stocks</option>
-                                    <option value="audi">Income Tax & GST</option>
+                                    <option value="audi">Income Tax</option>
                                     <option value="audi">Real Estate</option>
                                 </select>
                             </div>
@@ -300,11 +304,10 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                         </ul>
                     </div>
                     <div class="col-xl-4 col-lg-5 col-9">
-                        <div class="title">Reach us at</div>
-                        <p class="text-right text-white"><b>Office Address</b> -  317, 3rd Floor, AIC@36 Inc.
+                        <div class="title text-left">Reach us at</div>
+                        <p class="text-white text-left"><b>Office Address</b> -  317, 3rd Floor, AIC@36 Inc.
 City Center Mall, Pandri, Raipur (C.G) – 492001<br><br><b>OFFICE HOURS</b>
-Monday - Friday: 10AM - 6PM Saturday: By appointment Sunday: Closed<b>
-Reach Us Email id</b> – support@finorator.com</p>
+Monday - Friday: 10AM - 6PM Saturday: By appointment Sunday: Closed – support@finorator.com</p>
                     </div>
                 </div>
                 <hr>
