--- a/about-us.html
+++ b/about-us.html
@@ -28,7 +28,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Solutions</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item test">Products<span class="caret"></span></a>
+                            <a class="dropdown-item test">Product<span class="caret"></span></a>
                             <ul class="dropdown-menu dropdown-submenu">
                                 <li>
                                     <a tabindex="-1" href="index.html#segment" class="dropdown-item">Shares & Stocks</a>
@@ -37,10 +37,10 @@
                                     <a tabindex="-1" href="index.html#segment" class="dropdown-item">Mutual Fund</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Insurance</a>
+                                    <a tabindex="-1" href="https://www.gibl.in/?source=1000051793" target="_blank" class="dropdown-item">Insurance</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Loans</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Loans</a>
                                 </li>
                                 <li>
                                     <a tabindex="-1" href="index.html#segment" class="dropdown-item">Income Tax</a>
@@ -73,7 +73,7 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link active" href="about-us.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
+                        <a class="nav-link" href="about-us.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link" href="partner.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
@@ -83,7 +83,7 @@
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item" href="#">FAQs</a>
                             <a class="dropdown-item" href="#">Blogs</a>
-                            <a class="dropdown-item" href="#">Our tie Up Partners</a>
+                            <a class="dropdown-item" href="index.html#partners">Our Partners</a>
                         </div>
                     </li>
                 </ul>
@@ -106,14 +106,14 @@ About Finorator</h1>
         </div>
         <div class="section-body about-u">
             <div class="container">
-                <div class="row">
-                    <div class="vision-card col-xl-5 col-lg-5">
+                <div class="row" style="justify-content: center;">
+                    <div class="vision-card col-xl-5 col-lg-4">
                         <img src="assets/vision.png"/>
                         <div class="theme-head text-center">Our Vision</div>
                         <div class="description text-center">Financial freedom for everyone
 </div>
                     </div>
-                    <div class="vision-card col-xl-5 col-lg-5">
+                    <div class="vision-card col-xl-5 col-lg-4">
                         <img src="assets/mission.png"/>
                         <div class="theme-head text-center">Our Mission</div>
                         <div class="description text-center">To act as a single leading platform comprehensive to all financial needs and applications for all arrays of users, eradicating the utility of different and separate financial platforms.
@@ -126,8 +126,9 @@ About Finorator</h1>
             <div class="container">
                 <div class="theme-head text-center">
                     Who we are ?                     
-                    <div class="description text-center">Our team of Chartered Accountant professional specialized in the field of finance have made a unified platform FINORATOR to help you accomplish your financial goals & manage all financial operations inside a single platform.
-</div>
+                    <div class="description text-center">Our team of Chartered Accountant professional specialized in the field of finance have made a unified platform 
+                        <b>FINORATOR</b> to help you accomplish your financial goals &amp; manage all financial operations inside a single platform.
+                    </div>
                 </div>
                 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
@@ -218,7 +219,7 @@ About Finorator</h1>
                             <div class="title">Absolute 
                                 <br>Transparency
                             </div>
-                            <div class="description">Get insights on pricing, a detailed comparison of different segments, and increase your financial awareness by filtering products as per your need.
+                            <div class="description">Get insights on pricing, detailed comparison of different segments, filter products and services as per your needs and increase financial awareness.
 </div>
                         </div>
                     </div>
@@ -236,14 +237,14 @@ About Finorator</h1>
                     <div class="col-xl-3 col-lg-3 col-sm-6">
                         <div class="text-center feature-smallcard">
                             <img src="assets/side-feature4.svg">
-                            <div class="title">Integrated Financial solutions</div>
-                            <div class="description">No need to jump between different applications for different purposes. Using Finorator, you can integrate data of investments, banking, loans, mutual funds, tax filing and more for all financial operations inside one single application.</div>
+                            <div class="title">Integrated Financial Solutions</div>
+                            <div class="description">No need to jump between different applications for different purposes. Finorator, automatically integrate data of  investments, banking, loans, mutual funds, tax filing and more for all financial operations inside one single application.</div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-sm-6"> 
                         <div class="text-center feature-smallcard">
                             <img src="assets/feature-5.svg">
-                            <div class="title">Pay Once for One Segment</div>
+                            <div class="title">Pay Only Once</div>
                             <div class="description">You don’t need to pay multiple times to avail different services under each segment and sub-segments. With Finorator, you only pay once to gain access to a range of products & services under each segment or sub-segment.</div>
                         </div>
                     </div>
@@ -259,7 +260,7 @@ About Finorator</h1>
                     <div class="col-xl-4 col-lg-4 col-sm-12">
                         <div class="text-center feature-smallcard">
                             <img src="assets/feature-7.svg">
-                            <div class="title">Refer products and Win Cash Rewards</div>
+                            <div class="title">Refer Products and Win Cash Rewards</div>
                             <div class="description">Avail cash rewards and cashback for each product referral you make to your friends, family, and colleagues.
 </div>
                         </div>
@@ -271,7 +272,8 @@ About Finorator</h1>
             <div class="container">
                 <div class="row">
                     <div class="col-xl-3 col-lg-3 col-12">
-                        <img src="assets/logo-white.png" class="mb-4">
+                        <img src="assets/logo-white.png">
+                        <p class="theme-p text-light" style="padding-left: 12px;"><b>A Fintech Startup</b>, providing a unified platform to help you achieve your financial goals &amp; manage all financial operations inside a single platform</p>
                         <ul class="sm-icons">
                             <li>
                                 <img src="assets/fb.png">
@@ -301,11 +303,11 @@ About Finorator</h1>
                         </ul>
                     </div>
                     <div class="col-xl-4 col-lg-5 col-9">
-                        <div class="title">Reach us at</div>
-                        <p class="text-right text-white"><b>Office Address</b> -  317, 3rd Floor, AIC@36 Inc.
-City Center Mall, Pandri, Raipur (C.G) – 492001<br><br><b>OFFICE HOURS</b>
-Monday - Friday: 10AM - 6PM Saturday: By appointment Sunday: Closed<b>
-Reach Us Email id</b> – support@finorator.com</p>
+                        <div class="title">Contact us</div>
+                        <p class="text-white text-left"><b>Office Address</b> -  317, 3rd Floor, AIC@36 Inc.
+City Center Mall, Pandri, Raipur (C.G) – 492001<br><br><b>Office Hours -</b>
+Monday - Friday: 10AM - 6PM<b>
+Email Id</b> – support@finorator.com</p>
                     </div>
                 </div>
                 <hr>
