--- a/partner.html
+++ b/partner.html
@@ -37,10 +37,10 @@
                                     <a tabindex="-1" href="index.html#segment" class="dropdown-item">Mutual Fund</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Insurance</a>
+                                    <a tabindex="-1" href="https://www.gibl.in/?source=1000051793" target="_blank" class="dropdown-item">Insurance</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Loans</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Loans</a>
                                 </li>
                                 <li>
                                     <a tabindex="-1" href="index.html#segment" class="dropdown-item">Income Tax</a>
@@ -76,14 +76,14 @@
                         <a class="nav-link" href="about-us.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link active" href="partner.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
+                        <a class="nav-link" href="partner.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Resources</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item" href="#">FAQs</a>
                             <a class="dropdown-item" href="#">Blogs</a>
-                            <a class="dropdown-item" href="#">Our tie Up Partners</a>
+                            <a class="dropdown-item" href="index.html#partners">Our Partners</a>
                         </div>
                     </li>
                 </ul>
@@ -103,7 +103,7 @@
                             <h1 class="theme-h1">Financial Products
 Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-type='[ "Supermarket.", "Bazaar." ]'></a></span></h1>
                             <p class="theme-p mb-4">Grow your expertise and increase your business revenue to become a technology-driven financial manager — Finotarian!</p>
-                            <p class="theme-p mb-4">Increase your learning graph regularly with our IRDA and NISM affiliated certified trainings</p>
+                            <p class="theme-p mb-4">Increase your learning graph regularly with our affiliated IRDA and NISM  certification training programs</p>
                             <a class="theme-btn btn my-2 my-sm-0 theme-bg2" href="#partner-body">Learn More</a>
                         </div>
                     </div>
@@ -146,7 +146,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                         <div class="text-center feature-smallcard">
                             <img src="assets/partner-feature-3.svg">
                             <div class="title">
-                                Sell your products Online
+                                Sell your Products Online
 </div>
                             <div class="description">Easily link all your social media and digital platforms seamlessly and sell your products online
 </div>
@@ -168,7 +168,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                             <div class="title">
                                 Effortless User Interface
 </div>
-                            <div class="description">Navigate through different segments using a simple and easy User experience.
+                            <div class="description">Navigate through different segments using a simple and easy user experience.
 </div>
                         </div>
                     </div>
@@ -211,7 +211,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                             <div class="title">
                                 Better Framework
 </div>
-                            <div class="description">Use our free financial calculator and tools like Customer Tracker, Instant Quotes & Policy Purchase, and Career Growth Training affiliated with IRDA and NISM certifications to grow your revenue by many folds
+                            <div class="description">Finorator provides tools like - Investment, EMI, Insurance Premium Calculators, Centralized CRM System and Career growth certifications to grow your revenue by many folds
 </div>
                         </div>
                     </div>
@@ -274,7 +274,8 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
             <div class="container">
                 <div class="row">
                     <div class="col-xl-3 col-lg-3 col-12">
-                        <img src="assets/logo-white.png" class="mb-4">
+                        <img src="assets/logo-white.png">
+                        <p class="theme-p text-light" style="padding-left: 12px;"><b>A Fintech Startup</b>, providing a unified platform to help you achieve your financial goals &amp; manage all financial operations inside a single platform</p>
                         <ul class="sm-icons">
                             <li>
                                 <img src="assets/fb.png">
@@ -304,10 +305,11 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                         </ul>
                     </div>
                     <div class="col-xl-4 col-lg-5 col-9">
-                        <div class="title text-left">Reach us at</div>
+                        <div class="title">Contact us</div>
                         <p class="text-white text-left"><b>Office Address</b> -  317, 3rd Floor, AIC@36 Inc.
-City Center Mall, Pandri, Raipur (C.G) – 492001<br><br><b>OFFICE HOURS</b>
-Monday - Friday: 10AM - 6PM Saturday: By appointment Sunday: Closed – support@finorator.com</p>
+City Center Mall, Pandri, Raipur (C.G) – 492001<br><br><b>Office Hours -</b>
+Monday - Friday: 10AM - 6PM<b>
+Email Id</b> – support@finorator.com</p>
                     </div>
                 </div>
                 <hr>
