--- a/terms-and-condition.html
+++ b/terms-and-condition.html
@@ -37,10 +37,10 @@
                                     <a tabindex="-1" href="index.html#segment" class="dropdown-item">Mutual Fund</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Insurance</a>
+                                    <a tabindex="-1" href="https://www.gibl.in/?source=1000051793" target="_blank" class="dropdown-item">Insurance</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="#segment" class="dropdown-item">Loans</a>
+                                    <a tabindex="-1" href="index.html#segment" class="dropdown-item">Loans</a>
                                 </li>
                                 <li>
                                     <a tabindex="-1" href="index.html#segment" class="dropdown-item">Income Tax</a>
@@ -83,7 +83,7 @@
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
                             <a class="dropdown-item" href="#">FAQs</a>
                             <a class="dropdown-item" href="#">Blogs</a>
-                            <a class="dropdown-item" href="#">Our tie Up Partners</a>
+                            <a class="dropdown-item" href="index.html#partners">Our Partners</a>
                         </div>
                     </li>
                 </ul>
@@ -276,7 +276,8 @@ ul.ul1 {
             <div class="container">
                 <div class="row">
                     <div class="col-xl-3 col-lg-3 col-12">
-                        <img src="assets/logo-white.png" class="mb-4">
+                        <img src="assets/logo-white.png">
+                        <p class="theme-p text-light" style="padding-left: 12px;"><b>A Fintech Startup</b>, providing a unified platform to help you achieve your financial goals &amp; manage all financial operations inside a single platform</p>
                         <ul class="sm-icons">
                             <li>
                                 <img src="assets/fb.png">
@@ -306,11 +307,11 @@ ul.ul1 {
                         </ul>
                     </div>
                     <div class="col-xl-4 col-lg-5 col-9">
-                        <div class="title">Reach us at</div>
-                        <p class="text-right text-white"><b>Office Address</b> -  317, 3rd Floor, AIC@36 Inc.
-City Center Mall, Pandri, Raipur (C.G) – 492001<br><br><b>OFFICE HOURS</b>
-Monday - Friday: 10AM - 6PM Saturday: By appointment Sunday: Closed<b>
-Reach Us Email id</b> – support@finorator.com</p>
+                        <div class="title">Contact us</div>
+                        <p class="text-white text-left"><b>Office Address</b> -  317, 3rd Floor, AIC@36 Inc.
+City Center Mall, Pandri, Raipur (C.G) – 492001<br><br><b>Office Hours -</b>
+Monday - Friday: 10AM - 6PM<b>
+Email Id</b> – support@finorator.com</p>
                     </div>
                 </div>
                 <hr>
