--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                     <a tabindex="-1" href="index.html#segment" class="dropdown-item">Mutual Fund</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="https://www.gibl.in/?source=1000051793" target="_blank" class="dropdown-item">Insurance</a>
+                                    <a tabindex="-1" href="https://www.gibl.in/?source=1000051793" class="dropdown-item">Insurance</a>
                                 </li>
                                 <li>
                                     <a tabindex="-1" href="index.html#segment" class="dropdown-item">Loans</a>
@@ -138,7 +138,7 @@
                                             <div class="card-holder">
                                                 <img src="assets/insurance.svg">
                                                 <div class="card-title">Insurance</div>
-                                                <p class="theme-p theme-color"><a href="https://www.gibl.in/?source=1000051793" target="_blank">Live Now !</a></p>
+                                                <p class="theme-p theme-color"><a href="https://www.gibl.in/?source=1000051793">Live Now !</a></p>
                                             </div>
                                         </div></a>
                                 </div>
