--- a/terms-and-condition.html
+++ b/terms-and-condition.html
@@ -37,7 +37,7 @@
                                     <a tabindex="-1" href="index.html#segment" class="dropdown-item">Mutual Fund</a>
                                 </li>
                                 <li>
-                                    <a tabindex="-1" href="https://www.gibl.in/?source=1000051793" target="_blank" class="dropdown-item">Insurance</a>
+                                    <a tabindex="-1" href="https://www.gibl.in/?source=1000051793" class="dropdown-item">Insurance</a>
                                 </li>
                                 <li>
                                     <a tabindex="-1" href="index.html#segment" class="dropdown-item">Loans</a>
